// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemPanel - Item Should work well when mousedown and mouseup 1`] = `
<div
  class="moduleItem-5"
  role="button"
>
  <p>
    test item:default
  </p>
</div>
`;

exports[`ItemPanel - Item Should work well when mousedown and mouseup 2`] = `
<div
  class="moduleItem-5"
  role="button"
>
  <p>
    test item:addingNode
  </p>
</div>
`;

exports[`ItemPanel - Item Should work well when mousedown and mouseup 3`] = `
<div
  class="moduleItem-5"
  role="button"
>
  <p>
    test item:default
  </p>
</div>
`;

exports[`ItemPanel - Item Should work well when mousedown and mouseup: events 1`] = `[]`;
